[package]
name = "ping-sweep"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ping-sweep"
path = "rust/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
socket2 = "0.6"
pnet = "0.35"
pnet_datalink = "0.35"
ipnetwork = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
rand = "0.8"
