[project]
name = "ping-sweep"
version = "0.1.0"
description = "A fast async ping sweep utility for network discovery"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
ping-sweep = "ping_sweep.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
